--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <mat-drawer-container class="container">
   <mat-drawer class="side-drawer" mode="side" opened>
-    <div class="server-title">
-      Slackclone
-    </div>
+    <div class="server-title">Slackclone test</div>
   </mat-drawer>
   <mat-drawer-content>
     <div class="top-menu"></div>
