--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
     <div class="top-menu"></div>
     <!--main content-->
     <router-outlet></router-outlet>
+    <ngx-auth-firebaseui></ngx-auth-firebaseui>
   </mat-drawer-content>
 </mat-drawer-container>
