--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <li *ngFor="let channel of allChannels">
         {{channel.name}}
       </li>
-      <li (click)="addChannel()">Add Channel</li>
+      <li (click)="openDialog()">Add Channel</li>
     </ul>
   </mat-drawer>
   <mat-drawer-content>
