--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,19 @@
 <h2>{{ activeChannel.name }}</h2>
+
+<mat-card *ngFor="let message of messages">{{ message.content }}</mat-card>
+<form class="example-form">
+  <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>Message</mat-label>
+    <input
+      matInput
+      #message
+      maxlength="256"
+      placeholder="Ex. I need help with..."
+    />
+    <mat-hint align="start"
+      ><strong>Don't disclose personal info</strong>
+    </mat-hint>
+    <mat-hint align="end">{{ message.value.length }} / 256</mat-hint>
+  </mat-form-field>
+  <button mat-button (click)="sendMessage(message.value)">Basic</button>
+</form>
