--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,10 @@
 <h2>{{ activeChannel.name }}</h2>
 
-<mat-card *ngFor="let message of messages">{{ message.content }}</mat-card>
+<mat-card *ngFor="let message of messages">
+  <div>{{ getUserById(message.author).displayName}}</div>
+  <div>{{ message.content }}</div>
+  <div>{{ message.time | date : 'medium'}}</div>
+</mat-card>
 <form class="example-form">
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Message</mat-label>
