--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,9 @@
 <div>
   <div>
     <mat-card *ngFor="let message of messages" (click)="openThread(message)">
-      <div>{{ getUserById(message.author).displayName}}</div>
+      <div>{{ getUserById(message.author).displayName }}</div>
       <div>{{ message.content }}</div>
-      <div>{{ message.time | date : 'medium'}}</div>
+      <div>{{ message.time | date: "medium" }}</div>
     </mat-card>
 
     <form class="example-form">
@@ -25,10 +25,15 @@
     </form>
   </div>
   <div *ngIf="showThread">
+    <mat-card>
+      <div>{{ getUserById(currentMessage.author).displayName }}</div>
+      <div>{{ currentMessage.content }}</div>
+      <div>{{ currentMessage.time | date: "medium" }}</div>
+    </mat-card>
     <mat-card *ngFor="let thread of activeThread">
-      <div>{{ getUserById(thread.author).displayName}}</div>
+      <div>{{ getUserById(thread.author).displayName }}</div>
       <div>{{ thread.content }}</div>
-      <div>{{ thread.time | date : 'medium'}}</div>
+      <div>{{ thread.time | date: "medium" }}</div>
     </mat-card>
 
     <form class="example-form">
@@ -45,8 +50,9 @@
         </mat-hint>
         <mat-hint align="end">{{ message.value.length }} / 256</mat-hint>
       </mat-form-field>
-      <button mat-button (click)="sendThreadMessage(message.value)">Basic</button>
+      <button mat-button (click)="sendThreadMessage(message.value)">
+        Basic
+      </button>
     </form>
   </div>
 </div>
-
