--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,32 +1,33 @@
-.container{
-    height:100vh;
-    .side-drawer{
-        width:300px;
-        background-color:#340040;
-        color:gray;
-        .server-title{
-            display:flex;
-            justify-content:center;
-            align-items:center;
-            margin-top:50px;
-            border-top:1px solid white;
-            height:60px;
-            border-bottom:1px solid white;
-            font-size:30px;
-            font-weight:800;
-            color:white;
-        }
+.container {
+  height: 100vh;
+
+  .side-drawer {
+    width: 300px;
+    background-color: #340040;
+    color: gray;
+    .server-title {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 50px;
+      border-top: 1px solid white;
+      height: 60px;
+      border-bottom: 1px solid white;
+      font-size: 30px;
+      font-weight: 800;
+      color: white;
     }
-    .top-menu{
-        height:50px;
-        background-color:#340040;
-    }
+  }
+  .top-menu {
+    height: 50px;
+    background-color: #340040;
+    position: sticky;
+    top: 0;
+  }
 }
 
-.router-outlet-div{
+.router-outlet-div {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-
