--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,3 +31,27 @@
   justify-content: center;
   align-items: center;
 }
+
+#side-nav-content{
+  margin-top:8px;
+  margin-left:8px;
+  position:relative;
+  li{
+    margin-bottom:2px;
+    margin-top:2px;
+  }
+}
+
+#log-out-button{
+  position:absolute;
+  bottom:10px;
+  left:0;
+  right:0;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.channels-container{
+  margin-left:12px;
+  
+}
