--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin:0;
     padding:0;
 }
+ul{
+    list-style-type:none;
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
