--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,11 +3,20 @@
   <div>
     <mat-card *ngFor="let message of messages" (click)="openThread(message)">
       <div>{{ getUserById(message.author).displayName }}</div>
-      <div>{{ message.content }}</div>
+      <div [innerHTML]="message.content "></div>
       <div>{{ message.time | date: "medium" }}</div>
     </mat-card>
 
-    <form class="example-form">
+    <editor [init]="{
+    menubar: 'file edit view',
+    toolbar: 'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | outdent indent'
+    }" [(ngModel)]="htmlMessage">
+    </editor>
+    <button mat-button (click)="sendMessage()">
+      Send
+    </button>
+
+    <!-- <form class="example-form">
       <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Message</mat-label>
         <input
@@ -22,37 +31,47 @@
         <mat-hint align="end">{{ message.value.length }} / 256</mat-hint>
       </mat-form-field>
       <button mat-button (click)="sendMessage(message.value)">Basic</button>
-    </form>
+    </form> -->
   </div>
   <div *ngIf="showThread">
     <mat-card>
       <div>{{ getUserById(currentMessage.author).displayName }}</div>
-      <div>{{ currentMessage.content }}</div>
+      <div [innerHTML]="currentMessage.content"></div>
       <div>{{ currentMessage.time | date: "medium" }}</div>
     </mat-card>
     <mat-card *ngFor="let thread of activeThread">
       <div>{{ getUserById(thread.author).displayName }}</div>
-      <div>{{ thread.content }}</div>
+      <div [innerHTML]="thread.content"></div>
       <div>{{ thread.time | date: "medium" }}</div>
     </mat-card>
 
-    <form class="example-form">
+    <editor [init]="{
+      menubar: 'file edit view',
+      toolbar: 'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | outdent indent'
+     }" [(ngModel)]="htmlThread">
+    </editor>
+    <button mat-button (click)="sendThreadMessage()">
+      Send
+    </button>
+
+    <!-- <form class="example-form">
       <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Thread Message</mat-label>
         <input
           matInput
-          #message
+          #message2
           maxlength="256"
           placeholder="Ex. I need help with..."
         />
         <mat-hint align="start"
           ><strong>Don't disclose personal info</strong>
         </mat-hint>
-        <mat-hint align="end">{{ message.value.length }} / 256</mat-hint>
+        <mat-hint align="end">{{ message2.value.length }} / 256</mat-hint>
       </mat-form-field>
-      <button mat-button (click)="sendThreadMessage(message.value)">
+      <button mat-button (click)="sendThreadMessage(message2.value)">
         Basic
       </button>
-    </form>
+    </form> -->
   </div>
 </div>
+
