--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,7 @@
+.home-container {
+  display: flex;
+}
+
 .message {
   width: 70%;
   height: 100%;
@@ -16,7 +20,6 @@
 
 .mat-button {
   width: 10% !important;
-  min-height: 100% !important;
 }
 
 // message
@@ -36,9 +39,7 @@
 // Thread
 
 .thread {
-  z-index: 3;
-  position: relative;
-  background-color: blue !important;
+  width: 30%;
 }
 
 .openthread {
