--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -18,3 +18,30 @@
   width: 10% !important;
   min-height: 100% !important;
 }
+
+
+
+.center-div {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.editor-div {
+  position: relative;
+  width: 90%;
+  editor {
+    width: 100%;
+    height: 100%;
+  }
+  button {
+    position: absolute;
+    min-height: unset!important;
+    bottom: 0px;
+    right: 0;
+  }
+}
+
+.tox-edit-area {
+  height: 200px!important;
+}
