--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,8 @@
           height: 200,
           branding: false,
           menubar:false,
-          statusbar: false
+          statusbar: false,
+          browser_spellcheck: true
         }" 
         [(ngModel)]="htmlMessage">
         </editor>
