--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,9 @@
     <mat-card *ngFor="let message of messages" (click)="openThread(message)">
       <div>{{ getUserById(message.author).displayName }}</div>
       <div [innerHTML]="message.content"></div>
+      <div *ngFor="let imgURL of message.imageLinks">
+        <a [href]="imgURL"><img [src]="imgURL" width="100" height="100"></a>
+      </div>
       <div>{{ message.time | date: "medium" }}</div>
     </mat-card>
 
@@ -26,6 +29,7 @@
         >
         </editor>
         <button mat-button (click)="sendMessage()">Send</button>
+        <input type="file" (change)="upload($event)" accept=".png,.jpg"/>
       </div>
     </div>
   </div>
@@ -57,7 +61,10 @@
         >
         </editor>
         <button mat-button (click)="sendThreadMessage()">Send</button>
+        <input type="file" (change)="upload($event)" accept=".png,.jpg"/>
       </div>
     </div>
   </div>
 </div>
+
+
