--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,9 @@
 .container {
   height: 100vh;
 
+  h2 {
+    border-bottom: solid 1px rgba($color: #000000, $alpha: 0.3);
+  }
   .side-drawer {
     width: 300px;
     background-color: #340040;
@@ -23,6 +26,7 @@
     background-color: #340040;
     position: sticky;
     top: 0;
+    z-index: 3;
   }
 }
 
