--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,56 +1,59 @@
 <h2>{{ activeChannel.name }}</h2>
 <div class="home-container">
   <div class="message">
-    <mat-card *ngFor="let message of messages" (click)="openThread(message)">
-      <div>{{ getUserById(message.author).displayName }}</div>
-      <div [innerHTML]="message.content"></div>
-      <div *ngFor="let imgURL of message.imageLinks">
-        <a [href]="imgURL"><img [src]="imgURL" width="100" height="100"></a>
+    <div class="messages-container">
+      <div *ngFor="let message of messages" (click)="openThread(message)">
+        <div>{{ getUserById(message.author).displayName }}</div>
+        <div [innerHTML]="message.content"></div>
+        <div *ngFor="let imgURL of message.imageLinks">
+          <a [href]="imgURL"><img [src]="imgURL" width="100" height="100" /></a>
+        </div>
+        <div>{{ message.time | date: "medium" }}</div>
       </div>
-      <div>{{ message.time | date: "medium" }}</div>
-    </mat-card>
+    </div>
 
-    <div class="center-div">
-      <div class="editor-div">
-        <editor
-          [init]="{
-            toolbar:
-              'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | image',
-            height: 150,
-            branding: false,
-            menubar: false,
-            statusbar: false,
-            browser_spellcheck: true,
-            plugins: 'image',
-            images_file_types: 'jpg,svg,webp',
-            file_picker_types: 'image'
-          }"
-          [(ngModel)]="htmlMessage"
-        >
-        </editor>
-        <button mat-button (click)="sendMessage()">Send</button>
-        <input type="file" (change)="upload($event)" accept=".png,.jpg"/>
-      </div>
+    <div class="editor-div">
+      <editor
+        [init]="{
+          toolbar:
+            'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | image',
+          height: 150,
+          branding: false,
+          menubar: false,
+          statusbar: false,
+          browser_spellcheck: true,
+          plugins: 'image',
+          images_file_types: 'jpg,svg,webp',
+          file_picker_types: 'image'
+        }"
+        [(ngModel)]="htmlMessage"
+      >
+      </editor>
+      <button mat-button (click)="sendMessage()">Send</button>
+      <input type="file" (change)="upload($event)" accept=".png,.jpg" />
     </div>
   </div>
   <div *ngIf="showThread">
-    <mat-card>
-      <div>{{ getUserById(currentMessage.author).displayName }}</div>
-      <div [innerHTML]="currentMessage.content"></div>
-      <div>{{ currentMessage.time | date: "medium" }}</div>
-    </mat-card>
-    <mat-card *ngFor="let thread of activeThread">
+    <div class="threads-container">
+      <div>
+        <div>{{ getUserById(currentMessage.author).displayName }}</div>
+        <div [innerHTML]="currentMessage.content"></div>
+        <div>{{ currentMessage.time | date: "medium" }}</div>
+      </div>
+    </div>
+
+    <div *ngFor="let thread of activeThread">
       <div>{{ getUserById(thread.author).displayName }}</div>
       <div [innerHTML]="thread.content"></div>
       <div>{{ thread.time | date: "medium" }}</div>
-    </mat-card>
+    </div>
 
     <div class="center-div">
       <div class="editor-div">
         <editor
           [init]="{
             toolbar:
-              'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | outdent indent',
+              'undo redo | bold italic | alignleft aligncenter alignright alignjustify | outdent indent',
             height: 150,
             branding: false,
             menubar: false,
@@ -61,10 +64,8 @@
         >
         </editor>
         <button mat-button (click)="sendThreadMessage()">Send</button>
-        <input type="file" (change)="upload($event)" accept=".png,.jpg"/>
+        <input type="file" (change)="upload($event)" accept=".png,.jpg" />
       </div>
     </div>
   </div>
 </div>
-
-
