--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,6 @@
 .home-container {
   display: flex;
+  height: 100%;
 }
 
 .message {
@@ -46,25 +47,24 @@
 .openthread {
 }
 
-
-
 .center-div {
   width: 100%;
   display: flex;
-  justify-content: center;
+  position: sticky;
+  bottom: 0;
 }
 
 .editor-div {
-  position: relative;
-  width: 90%;
-  margin: 16px;
+  position: sticky;
+  bottom: 0;
+
   editor {
     width: 100%;
     height: 100%;
   }
   button {
     position: absolute;
-    min-height: unset!important;
+    min-height: unset !important;
     bottom: 0px;
     right: 0;
   }
@@ -77,5 +77,18 @@
 }
 
 .tox-edit-area {
-  height: 200px!important;
+  height: 200px !important;
+}
+
+.tox-tinymce {
+  border-radius: 0px !important;
+}
+
+.messages-container {
+  min-height: 100%;
+}
+
+.threads-container {
+  min-height: 100%;
+  border-left: solid 1px rgba($color: #000000, $alpha: 0.1);
 }
