--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,33 +2,33 @@
   <mat-drawer class="side-drawer" mode="side" opened>
     <div class="server-title">Slackclone test</div>
     <div *ngIf="auth.userKey" id="side-nav-content">
-      <b>Channels</b>
-      <div class="channels-container">
+      <b class="sidenav-mini-title">Channels</b>
+      <div>
         <ul>
-          <li
+          <li class="channels-container basic-hover"
             [routerLink]="['home', auth.userKey, channel.channelid]"
             *ngFor="let channel of allChannels"
           >
             # {{ channel.name }}
           </li>
-          <li (click)="openDialog()">Add Channel</li>
+          <li (click)="openDialog()" class="sidenav-mini-title basic-hover">+ Add Channel</li>
         </ul>
       </div>
-      <b>Direct Messages</b>
-      <div class="channels-container">
+      <b class="sidenav-mini-title">Direct Messages</b>
+      <div>
         <ul>
-          <li
+          <li class="channels-container basic-hover"
             *ngFor="let message of allDirectMessages"
             [routerLink]="['home', auth.userKey, message.directMessageId]"
           >
             {{ message.name }}
           </li>
-          <li (click)="openDialogDirectMessage()">Add Direct Message</li>
+          <li (click)="openDialogDirectMessage()" class="sidenav-mini-title basic-hover">+ Add Direct Message</li>
         </ul>
       </div>
     </div>
     <button id="log-out-button" mat-button color="warn" [routerLink]="''">
-      Log Out
+      Account Settings <img src="assets/img/settings-16.ico" alt="">
     </button>
   </mat-drawer>
   <mat-drawer-content>
