--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,11 +39,11 @@
 
 #side-nav-content {
   margin-top: 8px;
-  margin-left: 8px;
   position: relative;
   li {
     margin-bottom: 2px;
     margin-top: 2px;
+    
   }
 }
 
@@ -57,5 +57,16 @@
 }
 
 .channels-container {
-  margin-left: 12px;
+  padding-left: 20px;
+}
+
+.sidenav-mini-title{
+  padding-left:12px;
+}
+
+.basic-hover{
+  &:hover{
+  background-color:rgba(0,0,0,0.15);
+  }
+  cursor:pointer;
 }
