--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,46 +33,41 @@
       <input type="file" (change)="upload($event)" accept=".png,.jpg" />
     </div>
   </div>
-  <div *ngIf="showThread">
-    <div class="threads-container">
-      <div>
-        <div>{{ getUserById(currentMessage.author).displayName }}</div>
-        <div [innerHTML]="currentMessage.content"></div>
-        <div>{{ currentMessage.time | date: "medium" }}</div>
-      </div>
-    </div>
 
-    <div *ngFor="let thread of activeThread">
-      <div>{{ getUserById(thread.author).displayName }}</div>
-      <div [innerHTML]="thread.content"></div>
-      <div *ngFor="let imgURL of thread.imageLinks">
-        <a [href]="imgURL"><img [src]="imgURL" width="100" height="100"></a>
-      </div>
-      <div>{{ thread.time | date: "medium" }}</div>
+  <div *ngIf="showThread" class="threads-container">
+    <div>
+      <div>{{ getUserById(currentMessage.author).displayName }}</div>
+      <div [innerHTML]="currentMessage.content"></div>
+      <div>{{ currentMessage.time | date: "medium" }}</div>
     </div>
+  </div>
 
-    <div class="center-div">
-      <div class="editor-div">
-        <editor
-          [init]="{
-            toolbar:
-              'undo redo | bold italic | alignleft aligncenter alignright alignjustify | outdent indent',
-            height: 150,
-            branding: false,
-            menubar: false,
-            statusbar: false,
-            browser_spellcheck: true
-          }"
-          [(ngModel)]="htmlThread"
-        >
-        </editor>
-        <button mat-button (click)="sendThreadMessage()">Send</button>
-<<<<<<< HEAD
-        <input type="file" (change)="upload($event)" accept=".png,.jpg" />
-=======
-        <input type="file" (change)="uploadThread($event)" accept=".png,.jpg"/>
->>>>>>> bb9890955f8395c754f4bb10460058d8d814082f
-      </div>
+  <div *ngFor="let thread of activeThread">
+    <div>{{ getUserById(thread.author).displayName }}</div>
+    <div [innerHTML]="thread.content"></div>
+    <div *ngFor="let imgURL of thread.imageLinks">
+      <a [href]="imgURL"><img [src]="imgURL" width="100" height="100" /></a>
+    </div>
+    <div>{{ thread.time | date: "medium" }}</div>
+  </div>
+
+  <div class="center-div">
+    <div class="editor-div">
+      <editor
+        [init]="{
+          toolbar:
+            'undo redo | bold italic | alignleft aligncenter alignright alignjustify | outdent indent',
+          height: 150,
+          branding: false,
+          menubar: false,
+          statusbar: false,
+          browser_spellcheck: true
+        }"
+        [(ngModel)]="htmlThread"
+      >
+      </editor>
+      <button mat-button (click)="sendThreadMessage()">Send</button>
+      <input type="file" (change)="uploadThread($event)" accept=".png,.jpg" />
     </div>
   </div>
 </div>
