--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,6 @@
 .container {
   height: 100vh;
 
-
   .side-drawer {
     width: 300px;
     background-color: #340040;
@@ -31,8 +30,8 @@
 .router-outlet-div {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 90%;
+
+  min-height: 100vh;
 }
 
 #side-nav-content {
@@ -41,7 +40,6 @@
   li {
     margin-bottom: 2px;
     margin-top: 2px;
-    
   }
 }
 
@@ -58,13 +56,13 @@
   padding-left: 20px;
 }
 
-.sidenav-mini-title{
-  padding-left:12px;
+.sidenav-mini-title {
+  padding-left: 12px;
 }
 
-.basic-hover{
-  &:hover{
-  background-color:rgba(0,0,0,0.15);
+.basic-hover {
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.15);
   }
-  cursor:pointer;
+  cursor: pointer;
 }
