--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -30,7 +30,7 @@
 .profile-picture {
   width: 30px;
   height: 30px;
-  margin: 0px 10px;
+  margin: 5px 10px 0px 10px;
 }
 
 .name {
@@ -49,7 +49,6 @@
 
 .thread {
   width: 30%;
-  z-index: 3;
 }
 
 .center-div {
