--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,9 @@ app-home {
   width: 100%;
   height: 100%;
 }
+
+.tox-tinymce {
+  border-radius: 0px !important;
+  border: 0 !important;
+  border-top: 1px solid rgba($color: #000000, $alpha: 0.1) !important;
+}
