--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,7 +65,7 @@
         </div>
       </div>
 
-      <div class="editor-div">
+      <div class="editor-div-thread">
         <editor
           [init]="{
             toolbar:
