--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,8 @@
 .flex {
   display: flex;
 
+  .mat-drawer-content {
+  }
   cursor: pointer;
 
   &:hover {
@@ -10,11 +12,13 @@
 
 .home-container {
   display: flex;
-  height: 100%;
+  height: 100vh;
 }
 
 .messages {
-  width: 70%;
+  min-height: 100vh;
+  flex: 1;
+  position: relative;
 }
 
 .example-form {
@@ -86,6 +90,11 @@
   }
 }
 
+.editor-div-thread {
+  position: absolute;
+  bottom: 0;
+}
+
 .tox-edit-area {
   height: 200px !important;
 }
@@ -95,10 +104,12 @@
 }
 
 .messages-container {
-  min-height: 100%;
+  overflow-y: auto;
 }
 
 .threads-container {
   min-height: 100%;
   border-left: solid 1px rgba($color: #000000, $alpha: 0.1);
+  position: relative;
+  overflow-y: auto;
 }
