--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,32 +2,19 @@
 
 html,
 body {
-  height: 100vh;
+  min-height: 100vh;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow: hidden;
 
   h2 {
     border-bottom: solid 1px rgba($color: #000000, $alpha: 0.1);
     margin: 0 !important;
   }
 }
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-* {
-  margin: 0;
-  padding: 0;
-}
+
 ul {
   list-style-type: none;
-}
-
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 app-home {
