--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,6 @@
 .flex {
   display: flex;
 
-  .mat-drawer-content {
-  }
   cursor: pointer;
 
   &:hover {
@@ -11,30 +9,31 @@
 }
 
 .home-container {
-  display: flex;
-  height: 100vh;
+  // display: flex;
+  height: calc(100vh - 50px);
 }
 
 .messages {
-  min-height: 100vh;
-  flex: 1;
+  height: calc(100% - 33px);
+  // flex: 1;
   position: relative;
+  // overflow-y: auto;
 }
 
 .example-form {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  // position: absolute;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
 }
 
 .example-full-width {
-  width: 90%;
+  // width: 90%;
 }
 
 .mat-button {
-  width: 10% !important;
-  min-height: 100% !important;
+  // width: 10% !important;
+  // min-height: 100% !important;
 }
 
 .profile-picture {
@@ -54,19 +53,13 @@
 }
 
 .first-row {
-  display: flex;
+  // display: flex;
 }
 
 .thread {
-  width: 30%;
+  // width: 30%;
 }
 
-.center-div {
-  width: 100%;
-  display: flex;
-  position: sticky;
-  bottom: 0;
-}
 
 .editor-div {
   position: sticky;
@@ -91,25 +84,25 @@
 }
 
 .editor-div-thread {
-  position: absolute;
-  bottom: 0;
+  // position: absolute;
+  // bottom: 0;
 }
 
 .tox-edit-area {
-  height: 200px !important;
+  // height: 200px !important;
 }
 
-.tox-tinymce {
-  border-radius: 0px !important;
-}
+
 
 .messages-container {
   overflow-y: auto;
+  height: calc(100% - 150px);
 }
 
 .threads-container {
-  min-height: 100%;
-  border-left: solid 1px rgba($color: #000000, $alpha: 0.1);
-  position: relative;
-  overflow-y: auto;
+  // min-height: 100%;
+  // border-left: solid 1px rgba($color: #000000, $alpha: 0.1);
+  // position: relative;
+  // overflow-y: auto;
+
 }
