--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,9 @@
 
 html,
 body {
-  min-height: 100vh;
+  height: 100vh;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  overflow: hidden;
 
   h2 {
     border-bottom: solid 1px rgba($color: #000000, $alpha: 0.1);
@@ -19,7 +18,7 @@ ul {
 
 app-home {
   width: 100%;
-  height: 100%;
+  // height: 100%;
 }
 
 .tox-tinymce {
