--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,15 +8,22 @@
   }
 }
 
+
 .home-container {
   // display: flex;
-  height: calc(100vh - 50px);
+  height: calc(100% - 83px);
+}
+
+.div-message-thread {
+  display: flex;
+  justify-content: center;
+  height: 100%;
 }
 
 .messages {
-  height: calc(100% - 33px);
-  // flex: 1;
-  position: relative;
+  height: 100%;
+  flex: 1;
+  // position: relative;
   // overflow-y: auto;
 }
 
@@ -53,17 +60,19 @@
 }
 
 .first-row {
-  // display: flex;
+  display: flex;
 }
 
 .thread {
-  // width: 30%;
+  height: 100%;
+  width: 35%;
 }
 
 
 .editor-div {
   position: sticky;
   bottom: 0;
+  padding: 0 8px;
 
   editor {
     width: 100%;
@@ -93,6 +102,17 @@
 }
 
 
+.thread-header {
+  position: relative;
+
+  mat-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+  }
+}
+
 
 .messages-container {
   overflow-y: auto;
@@ -103,6 +123,7 @@
   // min-height: 100%;
   // border-left: solid 1px rgba($color: #000000, $alpha: 0.1);
   // position: relative;
-  // overflow-y: auto;
+  overflow-y: auto;
+  height: calc(100% - 33px);
 
 }
